<resources>
    <string name="app_name">AndroidProjectCollection</string>
    <string name="Layout_Exercise">Layout Exercise</string>
    <string name="btnButtonExercise">Button Exercise</string>
    <string name="button1">Button</string>
    <string name="button2">Button</string>
    <string name="button3">Button</string>
    <string name="atarashii">Atarashii Gakkou</string>
    <string name="emma">Emma Chamberlain</string>
    <string name="arsenal">Arsenal Womens</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="comment">Comment</string>
    <string name="btnOpenEmptyActivity">Close</string>
    <string name="btnReturnButtonActivity">Return</string>
    <string name="btnToast">Toast</string>
    <string name="btnChangeBg">Change BG</string>
    <string name="btnChangeButtonBg">Change Button BG</string>
    <string name="btnDisappear">Disappear</string>


    <string name="btnCalculator">Calculator</string>
    <string name="btnClearEverything">CE</string>
    <string name="btnDelete">DEL</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>

    <string name="btnAdd">+</string>
    <string name="btnSubtract">-</string>
    <string name="btnDivide">/</string>
    <string name="btnMultiply">*</string>
    <string name="btnPoint">.</string>
    <string name="btnAns">=</string>
    <string name="tvTopText"> </string>
    <string name="tvBottomText">0</string>


    <string name="btnMatch3">Match 3</string>

    <string name="r1c1"> </string>
    <string name="r1c2"> </string>
    <string name="r1c3"> </string>
    <string name="r1c4"> </string>
    <string name="r1c5"> </string>

    <string name="r2c1"> </string>
    <string name="r2c2"> </string>
    <string name="r2c3"> </string>
    <string name="r2c4"> </string>
    <string name="r2c5"> </string>

    <string name="r3c1"> </string>
    <string name="r3c2"> </string>
    <string name="r3c3"> </string>
    <string name="r3c4"> </string>
    <string name="r3c5"> </string>

    <string name="r4c1"> </string>
    <string name="r4c2"> </string>
    <string name="r4c3"> </string>
    <string name="r4c4"> </string>
    <string name="r4c5"> </string>

    <string name="r5c1"> </string>
    <string name="r5c2"> </string>
    <string name="r5c3"> </string>
    <string name="r5c4"> </string>
    <string name="r5c5"> </string>

    <string name="btnRestart_m3"> Restart </string>
    <string name="btnReturn_m3"> Back to Main</string>

    <string name="midterm">Midterm</string>
    <string name="passIntent">Passing Intents</string>
    <string name="fragments">Fragments</string>
    <string name="menus">Menus</string>



    <string name="mItemChange">Change</string>
    <string name="item">Item</string>
    <string name="mItemReset">Reset</string>
    <string name="mItemExit">Exit</string>

</resources>