<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mItemChange"
        android:title="@string/mItemChange">
        <menu>
            <item
                android:id="@+id/mItemText"
                android:title="Pop a text" />
            <item
                android:id="@+id/mItemColor"
                android:title="Change Background Color" />
            <item
                android:id="@+id/mItemSize"
                android:title="Change Size" />
            <item
                android:id="@+id/mItemShape"
                android:title="Change Shape" />
            <item
                android:id="@+id/mItemTextColor"
                android:title="Change Text Color" />
        </menu>
    </item>
    <item
        android:id="@+id/mItemReset"
        android:title="@string/mItemReset" />
    <item
        android:id="@+id/mItemExit"
        android:title="@string/mItemExit" />
</menu>