<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ButtonExercise">

    <Button
        android:id="@+id/btnOpenEmptyActivity"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnOpenEmptyActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnToast"
        android:layout_width="377dp"
        android:layout_height="48dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="158dp"
        android:text="@string/btnToast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOpenEmptyActivity" />

    <Button
        android:id="@+id/btnChangeBg"
        android:layout_width="377dp"
        android:layout_height="48dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="158dp"
        android:text="@string/btnChangeBg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnToast"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnChangeButtonBg"
        android:layout_width="377dp"
        android:layout_height="48dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="158dp"
        android:text="@string/btnChangeButtonBg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChangeBg" />

    <Button
        android:id="@+id/btnDisappear"
        android:layout_width="377dp"
        android:layout_height="48dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="158dp"
        android:text="@string/btnDisappear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChangeButtonBg" />

</androidx.constraintlayout.widget.ConstraintLayout>