<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnLayoutExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="121dp"
        android:text="@string/Layout_Exercise"
        app:layout_constraintBottom_toTopOf="@+id/btnButtonExercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCalculator"
        android:layout_width="173dp"
        android:layout_height="48dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="118dp"
        android:text="@string/btnCalculator"
        app:layout_constraintBottom_toTopOf="@+id/btnMatch3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnButtonExercise" />

    <Button
        android:id="@+id/btnMatch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="266dp"
        android:text="@string/btnMatch3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculator" />

    <Button
        android:id="@+id/btnButtonExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginEnd="159dp"
        android:text="@string/btnButtonExercise"
        app:layout_constraintBottom_toTopOf="@+id/btnCalculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLayoutExercise" />

</androidx.constraintlayout.widget.ConstraintLayout>